[gd_scene load_steps=18 format=3 uid="uid://daahuqr7gjojm"]

[ext_resource type="Script" path="res://main.gd" id="1_4f6yy"]
[ext_resource type="PackedScene" uid="uid://baxcljd4pi2y5" path="res://assets/background.tscn" id="2_p0xyc"]
[ext_resource type="PackedScene" uid="uid://sruafabg1gs5" path="res://assets/end.tscn" id="2_xd4s8"]
[ext_resource type="PackedScene" uid="uid://bgqlonx2reo62" path="res://assets/bacteria.tscn" id="4_ub1lf"]
[ext_resource type="FontFile" uid="uid://2g7nibblpvpr" path="res://font/joystix monospace.otf" id="5_4r2xc"]
[ext_resource type="PackedScene" uid="uid://ba6vkbb4vj8xq" path="res://assets/uv_light.tscn" id="6_skfuh"]
[ext_resource type="PackedScene" uid="uid://6pmc27wiuura" path="res://assets/amp.tscn" id="8_8f1w0"]
[ext_resource type="PackedScene" uid="uid://yvbpwom0naf0" path="res://assets/cadmium.tscn" id="9_jnnr2"]
[ext_resource type="PackedScene" uid="uid://csv2opykxguuf" path="res://assets/lactose.tscn" id="10_01wni"]
[ext_resource type="PackedScene" uid="uid://bc6kefpd2jmyr" path="res://assets/mucus.tscn" id="11_558l5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5skq"]
bg_color = Color(0.411765, 0.682353, 0.313726, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="ViewportTexture" id="ViewportTexture_sv2fn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0khr7"]
bg_color = Color(0.466667, 0.658824, 0.447059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhcq3"]
bg_color = Color(0.792157, 0.392157, 0.376471, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee4de"]
bg_color = Color(0.792157, 0.392157, 0.376471, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptvrd"]
bg_color = Color(0.623529, 0.407843, 0.627451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8tv60"]
bg_color = Color(0.623529, 0.407843, 0.627451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="main" type="Node"]
script = ExtResource("1_4f6yy")

[node name="background" parent="." instance=ExtResource("2_p0xyc")]

[node name="end" parent="." instance=ExtResource("2_xd4s8")]
position = Vector2(1018, 326)

[node name="UV_light" parent="." instance=ExtResource("6_skfuh")]
position = Vector2(616, 286)
scale = Vector2(0.83, 0.83)

[node name="bacteria" parent="." instance=ExtResource("4_ub1lf")]
position = Vector2(285, 379)
scale = Vector2(0.3, 0.3)

[node name="Button" type="Button" parent="."]
offset_left = 362.0
offset_top = 314.0
offset_right = 386.0
offset_bottom = 345.0
theme_override_fonts/font = ExtResource("5_4r2xc")
theme_override_styles/normal = SubResource("StyleBoxFlat_w5skq")
text = "?"
icon = SubResource("ViewportTexture_sv2fn")
metadata/_edit_use_anchors_ = true

[node name="editor" type="Button" parent="."]
offset_left = 18.0
offset_top = 22.0
offset_right = 78.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("5_4r2xc")
theme_override_styles/normal = SubResource("StyleBoxFlat_0khr7")
text = "edit
"

[node name="stop" type="Button" parent="."]
offset_left = 977.0
offset_top = 87.0
offset_right = 1133.0
offset_bottom = 124.0
theme_override_fonts/font = ExtResource("5_4r2xc")
theme_override_styles/normal = SubResource("StyleBoxFlat_uhcq3")
text = "stop"

[node name="play" type="Button" parent="."]
offset_left = 977.0
offset_top = 14.0
offset_right = 1133.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("5_4r2xc")
theme_override_styles/normal = SubResource("StyleBoxFlat_ee4de")
text = "play"

[node name="Price" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_4r2xc")
theme_override_font_sizes/font_size = 40

[node name="help" type="Button" parent="."]
offset_left = 840.0
offset_top = 12.0
offset_right = 944.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("5_4r2xc")
theme_override_styles/normal = SubResource("StyleBoxFlat_ptvrd")
text = "help"

[node name="menu" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -55.0
offset_right = 111.0
offset_bottom = -13.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_4r2xc")
theme_override_styles/normal = SubResource("StyleBoxFlat_8tv60")
text = "menu"

[node name="explanation" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="explanation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 0.764706)

[node name="Label" type="Label" parent="explanation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_4r2xc")
theme_override_font_sizes/font_size = 30
text = "les explications du niveau en gros
"
horizontal_alignment = 1

[node name="out" type="Button" parent="explanation"]
offset_left = 1054.0
offset_top = 18.0
offset_right = 1132.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("5_4r2xc")
text = "X"

[node name="AMP" parent="." instance=ExtResource("8_8f1w0")]
position = Vector2(274, 159)

[node name="cadmium" parent="." instance=ExtResource("9_jnnr2")]
position = Vector2(270, 108)

[node name="Lactose" parent="." instance=ExtResource("10_01wni")]
position = Vector2(406, 130)

[node name="mucus" parent="." instance=ExtResource("11_558l5")]
position = Vector2(739, 124)

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="editor" to="." method="_on_editor_button_down"]
[connection signal="button_down" from="stop" to="." method="_on_stop_button_down"]
[connection signal="button_down" from="play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="help" to="." method="_on_help_button_down"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="button_down" from="explanation/out" to="." method="_on_out_button_down"]
